# SDLStructured

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/Modules/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
src/: animation.cpp  animation.h  block.cpp  block.h  camera.cpp  camera.h  collisiondetector.cpp  collisiondetector.h  color.cpp  color.h  damageable.cpp  damageable.h  equipment.cpp  equipment.h  facingdirection.h  fallingobject.cpp  fallingobject.h  gameobject.cpp  gameobject.h  gamestate.h  gamestategame.cpp  gamestategame.h  gamestatemenu.cpp  gamestatemenu.h  inputdefinitions.h  inputmanager.cpp  inputmanager.h  item.cpp  item.h  log.cpp  log.h  music.cpp  music.h  npc.cpp  npc.h  observer.cpp  observer.h  particle.cpp  particle.h  particleemitter.cpp  (+24 more)
src/UI/: button.cpp  button.h  label.cpp  label.h  messagelog.cpp  messagelog.h  text.cpp  text.h  uielement.cpp  uielement.h
